--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <li><a href="#skills">Skills</a></li>
         <li style="float:right"><a href="#contact">Contact</a></li>
     </ul>
+    <div class=""container">
+        <img src="Images\splash-1.jpg"
+            width="1500"
+            height="658.25" />
+        <div class="centered">Welcome To My Site</div>
+    </div>
+    <h3>Created by Christian Ritz & Dillon Griffin</h3>
+
         <script src="app.js"></script>
         <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
