--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             height="658.25" />
         <div class="centered">Welcome To My Site</div>
     </div>
-    <h1 style="font-size:1vw">Created by Christian Ritz & Dillon Griffin</h1>
+    <h1 style="font-size:1vw;font-family:Cambria">Created by Christian Ritz & Dillon Griffin</h1>
 
         <script src="app.js"></script>
         <noscript>You need to enable JavaScript to view the full site.</noscript>
