--- a/index.html
+++ b/index.html
@@ -6,22 +6,14 @@
 </head>
 <body>
     <ul>
-        <li><a class="active" href="#aboutme">About Me</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#resume">Resume</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li style="float:right"><a href="#contact">Contact</a></li>
+        <li><a id="m1" class="active" href="#aboutme">About Me</a></li>
+        <li><a id="m2" href="#education">Education</a></li>
+        <li><a id="m3" href="#resume">Resume</a></li>
+        <li><a id="m4" href="#experience">Experience</a></li>
+        <li><a id="m5" href="#skills">Skills</a></li>
+        <li style="float:right"><a id="m6" href="#contact">Contact</a></li>
     </ul>
-    <div class=""container">
-        <img src="Images\splash-1.jpg"
-            width="1500"
-            height="658.25" />
-        <div class="centered">Welcome To My Site</div>
-    </div>
-    <h1 style="font-size:1vw;font-family:Cambria">Created by Christian Ritz & Dillon Griffin</h1>
-
-        <script src="app.js"></script>
-        <noscript>You need to enable JavaScript to view the full site.</noscript>
+    <script src="app.js"></script>
+    <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
 </html>
