--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
         <li><a id="m5" href="#skills">Skills</a></li>
         <li style="float:right"><a id="m6" href="#contact">Contact</a></li>
     </ul>
-    <div class=""container">
-        <img src="Images\splash-1.jpg"
-            width="1500"
-            height="658.25" />
-        <div class="centered">Welcome To My Site</div>
-    </div>
-    <h1 style="font-size:1vw;font-family:Cambria">Created by Christian Ritz & Dillon Griffin</h1>
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
+    <div class="container">
+        <img src="Images/splash-1.jpeg" />
+        <div class="centered">Welcome To My Site</div>
+    </div>
+    <h1>Created by Christian Ritz & Dillon Griffin</h1>
 </body>
 </html>
