--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <noscript>You need to enable JavaScript to view the full site.</noscript>
     <div class="container">
         <img src="Images/splash-1.jpeg" />
-        <div class="centered">Welcome To My Site</div>
+        <div class="centered">Greetings.</div>
     </div>
     <h1>Created by Christian Ritz & Dillon Griffin</h1>
 </body>
