topnav fixed pos/ smooth scroll for buttons/ home button

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
-    <ul>
-        <li><a id="m1" class="active" href="#aboutme">About Me</a></li>
-        <li><a id="m2" href="#education">Education</a></li>
-        <li><a id="m3" href="#resume">Resume</a></li>
-        <li><a id="m4" href="#experience">Experience</a></li>
-        <li><a id="m5" href="#skills">Skills</a></li>
-        <li style="float:right"><a id="m6" href="#contact">Contact</a></li>
-    </ul>
+    <div class="navbar">
+        <a id="mh" href="#home"><img class="homeButton" src="Images/home.png" /></a>
+        <a id="m1" href="#aboutme">About Me</a>
+        <a id="m2" href="#education">Education</a>
+        <a id="m3" href="#resume">Resume</a>
+        <a id="m4" href="#experience">Experience</a>
+        <a id="m5" href="#skills">Skills</a>
+        <a style="float:right" id="m6" href="#contact">Contact</a>
+    </div>
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
     <div class="container">
-        <img src="Images/splash-1.jpeg" />
+        <img class="splashImg" src="Images/splash-1.jpeg" />
         <div class="centered">Greetings.</div>
     </div>
     <h1>Created by Christian Ritz & Dillon Griffin</h1>
