--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <label for="message">Message</label>
                 <textarea class="message" id="message" name="message" cols="20" rows="5" placeholder="Enter Message..."></textarea>
                 <div class="submission">
+                    <input type="file" value="Upload File" >
                     <input type="submit" value="Submit">
-                    <input type="file" value="Upload File" />
                 </div>
             </form>
         </div>
